--- a/views/dogs.pug
+++ b/views/dogs.pug
@@ -2,22 +2,20 @@ extends layout
 
 block content
   h1= title
-  
-  -
-  .container-fluid
-  .row
-    - let dogs = [{ breed: 'Labrador Retriever', color: 'Golden', age: 3 },{ breed: 'German Shepherd', color: 'Black and Tan', age: 5 },{ breed: 'Beagle', color: 'Tricolor', age: 2 }]
-    each dog, index in dogs
-      .col-sm-4
-        div 
-          .card(onclick=`buy(${index})`)
-            .card-body
-              p Breed: #{dog.breed}
-              p Color: #{dog.color}
-              p Age: #{dog.age}
+  - let items = results
+  div(class="container-fluid")
+    div(class="row")
+      each item, index in results  
+        div(class="col-sm-2",onclick=`buy(${index})`)
+          p #{item.Dog_Breed} 
+          p #{item.Dog_Color}
+          p #{item.Dog_Name}
 
   script.
+    console.log("shjgh");
     function buy(index) {
-      alert(`You purchased item ${index}`);
+        console.log(index)
+        alert(' You purchased item ' + index);
     }
+
 
