--- a/views/dogs.pug
+++ b/views/dogs.pug
@@ -2,21 +2,30 @@ extends layout
 
 block content
   h1= title
-  - let items = results
+  p Welcome to #{title}
+
+  - let create = `dispatch(\"/dogs/create\")`
+  button.btn(class="btn-primary ml-1", onclick= create) Create
+
+  - let item = results
+
   div(class="container-fluid")
     div(class="row m-1")
-      each item, index in results 
-        - let destination = `dispatch(\"/dogs/update?id=${item._id}\")` 
-        div(class="col-sm-2",onclick=`buy(${index})`)
+      each item, index in results
+        - let destination = `dispatch(\"/dogs/update?id=${item._id}\")`
+        - let detail = `dispatch(\"/dogs/detail?id=${item._id}\")`
+        - let remove = `dispatch(\"/dogs/delete?id=${item._id}\")`
+        div(class="col-sm-2")
           ul
-            li #{item.Dog_Breed} 
+            li #{item.Dog_Breed}
             li #{item.Dog_Color}
             li #{item.Dog_Name}
-        button.btn( class="btn-primary ml-1", onclick= destination) Update
+
+        button.btn(class="btn-success ml-1", onclick= destination) Update
+        button.btn(class="btn-danger ml-1", onclick= detail) Detail
+        button.btn(class="btn-success ml-1", onclick= remove) Delete
+
   script.
     function dispatch(path){
-      window.location.href=path
-      }
-
-
-
+         window.location.href=path
+    }
