--- a/views/index.pug
+++ b/views/index.pug
@@ -1,22 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  button(type="button", class="btn btn-secondary", onclick="double()") I am a Button
-
-  div(id="double") Up the amount
-
-  script.
-      var value = 0;
-      var power = 1;
-      function double() {
-          value++;
-          power *= 2;
-          document.getElementById("double").innerText = "Two to the power " + value + " is " + power;
-        }
-
-        // Hyperlink to the endpoint
-        a(href="/dog") View More Dogs
-
-
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/dogs") Take me to dogs 
+    br
+    a(href="/logout") Logout
